# typecraft

./: .gitignore  README.md  dodo.py  noxfile.py  pyproject.toml
packagekit/data/: normalizer.py
packagekit/modeling/: __init__.py  dataclasses.py  toml.py
packagekit/typing/: generics.py
src/modelingkit/: _utils.py  annotation.py  annotations.py  converting.py  inspecting.py  model.py  models.py  serializing.py  toml.py  typedefs.py  typing_utils.py  validated_dataclass.py  validating.py  validation.py
src/modelingkit/extras/: __init__.py  toml.py
src/modelingkit/inspecting/: classes.py  functions.py
src/packagekit/: collections.py
src/packagekit/modeling/: dataclass.py  dataclasses.py  generics.py  normalizing.py  toml.py  typing_utils.py  validated_dataclass.py  validating.py
src/packagekit/typing/: generics.py
src/typecraft/: __init__.py  adapter.py  adapting.py  builtin_converters.py  converting.py  exceptions.py  lib.py  model.py  models.py  serializing.py  symmetric_converter.py  typedefs.py  types.py  validating.py
src/typecraft/converting/: __init__.py  _types.py  builtin_converters.py  converter.py  engine.py  mixins.py  serializer.py  symmetric_converter.py  utils.py  validator.py
src/typecraft/converting/converter/: __init__.py  base.py  plain.py  symmetric.py  type.py
src/typecraft/extras/: __init__.py  toml.py
src/typecraft/inspecting/: _utils.py  annotations.py  classes.py  functions.py  generics.py  utils.py
src/typecraft/model/: __init__.py  base.py  fields.py  methods.py
src/typecraft/utils/: object_collections.py
test/: converters.py  test_adapter.py  test_adapting.py  test_annotated_converting.py  test_annotation.py  test_annotations.py  test_converting.py  test_inspecting.py  test_model.py  test_models.py  test_symmetric_converter.py  test_toml.py  test_typing.py  test_typing_utils.py  test_validated_dataclass.py  test_validating.py  test_validation.py
test/builtin_converters/: test_dataclass.py  test_datetime.py
test/converting/: test_converter.py  test_validate.py
test/extras/: test_toml.py
test/inspecting/: test_annotation.py  test_annotation_utils.py  test_annotations.py  test_classes.py  test_functions.py  test_generics.py  test_helpers.py  test_signature.py  test_utils.py
test/modeling/: test_dataclass.py  test_dataclasses.py  test_normalizing.py  test_toml.py  test_validated_dataclass.py  test_validating.py
test/serializing/: test_serialize.py  test_serializer.py  test_serializers.py
test/validating/: test_validate.py  test_validator.py  test_validators.py
