[project]
authors = [
  {email = "mm21.dev@gmail.com", name = "mm21"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
description = "Toolkit for day-to-day package development"
name = "packagekit"
readme = "README.md"
requires-python = ">=3.12,<4.0"
version = "0.1.0"

[project.urls]
homepage = "https://github.com/mm21/packagekit"

[project.scripts]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
packages = [{include = "packagekit"}]

[tool.poetry.dependencies]
pydantic = {version = "^2.11.7", optional = true}
tomlkit = {version = "^0.13.3", optional = true}

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^25.1.0"
doit = "^0.36.0"
isort = "^6.0.1"
pytest = "^8.4.2"
toml-sort = "^0.24.2"

[tool.poetry.group.toml.dependencies]
pydantic = "*"
tomlkit = "*"

[tool.poetry.extras]
toml = [
  "pydantic",
  "tomlkit"
]

[tool.autoflake]
remove_all_unused_imports = true
remove_unused_variables = true

[tool.black]
target-version = ["py312", "py313"]

[tool.isort]
profile = "black"

[tool.tomlsort]
no_sort_tables = true
sort_table_keys = true
