[project]
authors = [
  {name = "mm21", email = "mm21.dev@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
description = "Annotation-native toolkit for data validation, transformation, and type inspection"
license = "MIT"
license-files = ["LICENSE"]
name = "typecraft"
readme = "README.md"
requires-python = ">=3.12,<4"
version = "0.1.0"

[project.optional-dependencies]
toml = ["tomlkit>=0.13.3,<0.14"]

[project.urls]
homepage = "https://github.com/mm21/typecraft"

[dependency-groups]
dev = [
  "autoflake>=2.3.1,<3",
  "black>=25.1.0,<26",
  "docformatter>=1.7.7,<2",
  "doit>=0.36.0,<0.37",
  "genbadge[tests]>=1.1.3",
  "isort>=6.0.1,<7",
  "nox>=2026.4.10",
  "pytest>=8.4.2,<9",
  "pytest-cov>=7.1.0",
  "toml-sort>=0.24.2,<0.25"
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.6,<0.12.0"]

[tool.autoflake]
in_place = true
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
quiet = true
target-version = ["py312", "py313"]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "\\.\\.\\.$"
]

[tool.coverage.run]
data_file = "__cache__/.coverage"

[tool.docformatter]
black = true
in-place = true
make-summary-multi-line = true
non-strict = true
pre-summary-newline = true
recursive = true

[tool.doit]
dep_file = "__cache__/.doit.db"
verbosity = 2

[tool.isort]
profile = "black"
quiet = true

[tool.nox]
default_venv_backend = "uv"
envdir = "__cache__/nox"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -s -v -rA"
cache_dir = "__cache__/pytest"
testpaths = "test"

[tool.tomlsort]
sort_first = ["project", "dependency-groups", "build-system"]
sort_table_keys = true
